# logos-irc-module

./: CMakeLists.txt  README.md  flake.nix  ircclient.cpp  ircclient.h  ircserver.cpp  ircserver.h  logos_irc_interface.h  logos_irc_plugin.cpp  logos_irc_plugin.h  metadata.json
example/: CMakeLists.txt  main.cpp
nix/: default.nix  example.nix  include.nix  lib.nix
